# streamtabs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
docs/screenshots/.fonttest/: frame.ansi
scripts/: ansi-to-svg.pl  fake-rust-logs.sh  generate-readme-screenshots.sh  release.sh
src/: main.rs
