[package]
name = "streamtabs"
version = "0.1.0"
edition = "2024"
description = "Easy to follow noisy logs without rerunning commands"
readme = "README.md"
license = "MIT"
keywords = ["terminal", "logs", "tui", "cli", "stream"]
categories = ["command-line-utilities"]
include = ["src/**", "Cargo.toml", "Cargo.lock", "README.md", "LICENSE"]

[[bin]]
name = "st"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
libc = "0.2"
